    + [JvW] Start depending on libdigest-md5-perl on woody, for using md5 on
      files.

  * frontend/lintian:
    + [JvW] Partial rewrite: checks are now plugins loaded into lintian,
      rather than executed as separate executables. Makes it easy to make
      common functions available, tags are done centrally, etc etc. Should
      also save quite a number of forks, thus more speedier.
  
  * lib/Util.pm:
    + [FL] dpkg supports comments in control files now, handle them
      correctly
    + [FL] a space after the colon is not mandatory in dpkg control
      files
  
  * reporting/harness:
    + [FL] Correctly support udeb packages
  * reporting/html_reports:
    + [FL] Correctly support udeb packages
    + [FL] Remove some unused code for bug references
  * reporting/bug.status:
    + [FL] Remove
  
  * testset/filenames:
    + [JvW] Fix two lintian warnings in lintian itself by touching files only
      on clean target, and not distributing them in the source
  
  * unpack/list-srcpkg:
    + [FL] Some packages don't specifiy a standards-version, e.g. d-i ones.
      Prevent Perl warnings.
  * unpack/list-udebpkg:
    + [FL] Fix sort of copy & paste error which caused the whole
      script to behave ill

 -- Debian Lintian Maintainers <lintian-maint@debian.org>  Tue, 29 Jun 2004 23:38:05 +0200

lintian (1.23.0) unstable; urgency=low

  The ``moving forward'' release, prepared by Marc 'HE' Brockschmidt,
  Frank Lichtenheld and Jeroen van Wolffelaar.

  * [FL] add udeb support (Closes: #216117)
    Thanks to Joey Hess for his input. Many changes, mostly to
    frontend/lintian, checks/debconf and checks/files

  * checks/binaries:
    + [JvW] Ignore static binaries in /usr/lib/debug
  * checks/changelog-file:
    + [HE] Check for the debmake template email address in the changelog
      entries. Patch by Steffen Moeller <moeller@pzr.uni-rostock.de>,
      thanks! (Closes: #199903)
    + [JvW] Loosen up checks for -0.x versions, could be either native or