@@ -32,12 +32,17 @@ binary-indep:
 	install -d debian/tmp/DEBIAN
 	cp -a files debian/tmp
 	chmod -R go=rX debian/tmp/files
+
+	install -d debian/tmp/usr/lib/filenames
+	install -m 555 -d debian/tmp/usr/lib/filenames/readonly
+	touch debian/tmp/usr/lib/filenames/readonly/test
+
 	install -d debian/tmp/usr/lib/menu
 	touch debian/tmp/usr/lib/menu/README
 	touch debian/tmp/usr/lib/menu/menu
 	chmod 644 debian/tmp/usr/lib/menu/*
+
 	install -d debian/tmp/usr/lib/perl5/foo
-	install -d debian/tmp/usr/lib/filenames
 	mkdir debian/tmp/usr/lib/perl5/.svn
 	mkdir debian/tmp/usr/lib/perl5/CVS
 	touch debian/tmp/usr/lib/perl5/foo/.packlist
@@ -45,25 +50,31 @@ binary-indep:
 	touch debian/tmp/usr/lib/perl5/foo/bar.pm
 	touch -t 197501010101 debian/tmp/usr/lib/perl5/foo/ancient.pm
 	chmod 644 debian/tmp/usr/lib/perl5/foo/bar.pm
+
 	install -d debian/tmp/usr/share/doc/filenames
 	touch debian/tmp/usr/share/doc/filenames/README.macosx
+
 	install -d debian/tmp/usr/share/doc/filenames/examples
 	touch debian/tmp/usr/share/doc/filenames/examples/__init__.py
 	touch debian/tmp/usr/share/doc/filenames/examples/very_interesting_example
 	touch debian/tmp/usr/share/doc/filenames/examples/very_interesting_example2
 	gzip debian/tmp/usr/share/doc/filenames/examples/very_interesting_example2
+
 	install -d debian/tmp/usr/lib/ada/adalib/
 	touch debian/tmp/usr/lib/ada/adalib/test.ali debian/tmp/usr/lib/ada/adalib/test2.ali
 	chmod 0644 debian/tmp/usr/lib/ada/adalib/test.ali
 	chmod 0444 debian/tmp/usr/lib/ada/adalib/test2.ali
+
 	install -d debian/tmp/usr/bin/X11/
 	touch debian/tmp/usr/bin/X11/testxbin
 	install -d debian/tmp/usr/X11R6/bin
 	touch debian/tmp/usr/X11R6/bin/testxbin2
+
 	touch debian/tmp/usr/share/doc/filenames/Changes
 	chmod 644 debian/tmp/usr/share/doc/filenames/Changes
 	gzip -9 debian/tmp/usr/share/doc/filenames/Changes
 	ln -s Changes.gz debian/tmp/usr/share/doc/filenames/changelog.gz
+
 	ln -s '../filenames/doc/version6.txt.gz' debian/tmp/usr/share/doc/filenames/version.txt.gz
 	ln -s ../../share/symlink debian/tmp/usr/lib/filenames/symlink1ok
 	ln -s ../../../etc/symlink debian/tmp/usr/lib/filenames/symlink1wrong
