@@ -117,6 +117,8 @@ lintian (1.23.1~beta) unstable; urgency=low
       rather than executed as separate executables. Makes it easy to make
       common functions available, tags are done centrally, etc etc. Should
       also save quite a number of forks, thus more speedier.
+    + [FL] Correctly handle non-empty write-protected directories
+      on removal
   
   * lib/Util.pm:
     + [FL] dpkg supports comments in control files now, handle them
